# MambaC2S

./: .gitignore  Inst.md  README.md  pyproject.toml  requirements.txt
.wolf/: anatomy.md  cerebrum.md  cron-state.json  identity.md  token-ledger.json
.wolf/hooks/: _session.json
azure/: create_vm.sh  fetch_results.sh  setup_vm.sh  train.sh
configs/: base.yaml  dataset.yaml  deepsets_autoencoder_raw.yaml  deepsets_raw.yaml  gru_hybrid.yaml  gru_rank_only.yaml  gru_strength_only.yaml  lstm_hybrid.yaml  lstm_rank_only.yaml  lstm_strength_only.yaml  mamba.yaml  mlp_autoencoder_raw.yaml  mlp_raw.yaml  transformer.yaml  transformer_hybrid.yaml  transformer_rank_only.yaml  transformer_strength_only.yaml
docs/: ANALYSIS_LLM_INSTRUCTIONS.md  EXPERIMENT_REGISTRY.md  README_for_analysis_llms.md  RESULT_SCHEMA.md
gcp/: create_vm.sh  fetch_results.sh  setup_vm.sh  train.sh
notebooks/: 01_dataset_inspection.ipynb  02_tokenization_examples.ipynb  03_embedding_visualization.ipynb  04_train_model.ipynb  05_run_all_experiments.ipynb  06_latent_dim_sweep.ipynb
runpod/: create_pod.sh  fetch_results.sh  monitor.py  setup_pod.sh  train.sh  train_hybrid.sh  train_latent_sweep.sh
scripts/: evaluate_model.py  latent_dim_sweep.py  make_splits.py  prepare_data.py  run_full_experiment.py  summarize_results.py  train_model.py
src/: __init__.py
src/data/: __init__.py  loader.py  preprocessing.py  splits.py  tokenization.py  vocab.py
src/evaluation/: __init__.py  metrics.py  perturbation.py
src/models/: __init__.py  base.py  deepsets_autoencoder.py  deepsets_model.py  gru_lm.py  (+5 more)
(+6 files in other folders)
